crates/ktask-tui/tests/snapshots/snapshots__input-inbox_error.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
6 Input inbox
resolve: the answer is empty
Task 1 asks
Should the parser reject trailing commas?

Options
- Reject them
- Accept them

Trade-offs
Rejecting is stricter; accepting is friendlier

Impact
Every task file already written







Recommended: Reject them
Answer:
Press ? for the key map
