crates/ktask-tui/tests/snapshots/snapshots__input-inbox_loading.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
6 Input inbox
Pending decisions: 0
No decisions are waiting.




















Press ? for the key map
