crates/ktask-tui/tests/snapshots/snapshots__live-run_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
2 Live run · following
No run in progress
command: -
gates: -
Waiting for output


















Press ? for the key map
