crates/ktask-tui/tests/snapshots/snapshots__logs_empty.snap
---
source: crates/ktask-tui/tests/snapshots.rs
expression: drawn
---
3 Logs
structured · level ≥ debug · phase - · search - · 0/0 following
No log entries




















Press ? for the key map
